// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScaleOfSignificanceListEditorField function should return <ScaleOfSignificanceListEditor> 1`] = `
<Memo(Connect(ScaleOfSignificanceListEditor))
  error={false}
  listEditorId="rek-significance"
  onChange={[MockFunction]}
/>
`;

exports[`ScaleOfSignificanceListEditorField function should return <ScaleOfSignificanceListEditor> with error attributes 1`] = `
<Memo(Connect(ScaleOfSignificanceListEditor))
  error={false}
  listEditorId="rek-significance"
  onChange={[MockFunction]}
  state={
    {
      "errorText": "test",
    }
  }
/>
`;
